syntax = "proto3";

package sow.tgbot;

option go_package = "./;proto";


/**
 *        ____  ____   ____
 *   __ _|  _ \|  _ \ / ___|
 *  / _` | |_) | |_) | |
 * | (_| |  _ <|  __/| |___
 *  \__, |_| \_\_|    \____|
 *  |___/
 *
 **/

service TgBotService {
    rpc PrintLog (PrintLogRequest) returns(Null);
}


message PrintLogRequest {
    string service_name = 1;
    string message = 2;
}

message Null {}



